Fixing package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "Kuduairo Translator",
+  "name": "Kuduairo-Translator",
   "description": "Portuguese to Kuduro translator App",
   "license": "MIT",
   "scripts": {
