--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/vercel": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.1",
     "remix": "^1.1.3"
   },
   "devDependencies": {
