--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
-    "@remix-run/vercel": "^1.1.3",
+    "@netlify/functions": "^0.10.0",
+    "@remix-run/netlify": "^1.1.3",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
