--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@remix-run/react": "^1.1.3",
-    "@remix-run/serve": "^1.1.3",
     "@netlify/functions": "^0.10.0",
     "@remix-run/netlify": "^1.1.3",
+    "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
     "remix": "^1.1.3"
